tests/outref/TERR009.ref
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected EXCLAMATION
LINE 1:1:   !;
            ^
